# agent-pizza

./: .gitignore  Cargo.toml  Reverse-engineering.md  diagramme de séquance.drawio
recipes/: examples.recipes
src/: main.rs
src/capture_reseaux/: 1_init_and_gossip.pcap  2_client_list_recipes.pcap  3_client_get_recipe.pcap  4_client_order_pizza.pcap
src/dsl/: mod.rs  parser.rs
src/node/: gossip.rs  mod.rs  producer.rs  state.rs
src/protocol/: frame.rs  gossip.rs  mod.rs  production.rs
