[package]
name        = "pizza_agent"
version     = "0.1.0"
edition     = "2021"

[[bin]]
name = "pizza_agent"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
ciborium   = "0.2"
uuid       = { version = "1", features = ["v4"] }
rand       = "0.8"
log        = "0.4"
env_logger = "0.11"
anyhow     = "1.0"
thiserror  = "1.0"
serde_json = "1.0"
